<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mfr</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="melih.akay@metu.edu.tr">melih</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>fs_msgs</depend>
  <depend>fsds_ros2_bridge</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>slam_toolbox</depend>
  <depend>odom_to_tf_ros2</depend>
  <depend>foxglove_bridge</depend>
  <depend>joy</depend>
  <depend>mfr_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
